--- a/api/template.yaml
+++ b/api/template.yaml
@@ -2,7 +2,6 @@ AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Description: >
   website-api
-
   API for davidcondemarin.com
   
 Globals:
@@ -10,7 +9,7 @@ Globals:
     Timeout: 3
 
 Resources:
-  HelloWorldFunction:
+  GetPostsForBlog:
     Type: AWS::Serverless::Function 
     Properties:
       CodeUri: src/posts/
